route/chaos-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chaos-ingress
  namespace: chaos-testing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: chaos-dashboard
          servicePort: 2333
        path: /
