route/web-show-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-show-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web-show
          servicePort: 8081
        path: /
